crates/baml-bridge-derive/tests/ui/nested_empty_render.rs
use baml_bridge_derive::BamlType;

#[derive(BamlType)]
struct NestedEmpty {
    #[render()]
    content: String,
}

fn main() {}
